--- a/config/module.ini
+++ b/config/module.ini
@@ -8,5 +8,5 @@ author_link  = "https://github.com/biblibre"
 module_link  = "https://github.com/biblibre/-omeka-s-module-BiblionumberSupport"
 support_link = "https://github.com/biblibre/-omeka-s-module-BiblionumberSupport/issues"
 configurable = false
-version      = "0.1.0"
-omeka_version_constraint = "^3.0.0"
+version      = "0.1.1"
+omeka_version_constraint = "^3.0.0 || ^4.0.0"
